--- a/config/sys.config
+++ b/config/sys.config
@@ -15,7 +15,7 @@
     {dns_listen_ip, {127,0,0,1}},
     {dns_listen_port, 53},
 
-    {server_enabled, false},
+    {server_enabled, true},
     {server_dns_ip, {8,8,8,8}},
     {server_dns_port, 53},
 
