--- a/config/sys.config
+++ b/config/sys.config
@@ -15,7 +15,7 @@
     {dns_listen_ip, {127,0,0,1}},
     {dns_listen_port, 53},
 
-    {server_enabled, true},
+    {server_enabled, false},
     {server_dns_ip, {8,8,8,8}},
     {server_dns_port, 53},
 
@@ -24,6 +24,7 @@
   {kernel, [
     {inet_dist_listen_min, 4368},
     {inet_dist_listen_max, 4368},
+    {sync_nodes_mandatory ['jpass@jproxy2']},
     {sync_nodes_timeout, 20000}
   ]}
 ].
