--- a/config/sys.config
+++ b/config/sys.config
@@ -24,7 +24,7 @@
   {kernel, [
     {inet_dist_listen_min, 4368},
     {inet_dist_listen_max, 4368},
-    {sync_nodes_mandatory ['jpass@jproxy2']},
+    {sync_nodes_mandatory, ['jpass@jproxy2']},
     {sync_nodes_timeout, 20000}
   ]}
 ].
